# UwU-shell

./: CMakeLists.txt  main.cpp
hdr/: Command.hpp  Error.hpp  Shell.hpp  builtins.hpp
src/: Command.cpp  Error.cpp  Shell.cpp
src/builtins/: cd.cpp  env.cpp  exit.cpp  export.cpp  unset.cpp
